<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.example.asmahansalem.habittracker.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageWeight"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_weight="0.01"
                app:srcCompat="@drawable/weight_goals" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">

                <TextView
                    android:id="@+id/textWeight"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/weight"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/weight_hint"
                    android:inputType="textPersonName|number" />

                <TextView
                    android:id="@+id/label_weight_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="kg" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">

                <TextView
                    android:id="@+id/textLoss"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/loss"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextLoss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/loss_hint"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/label_loss_units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="kg" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">

                <TextView
                    android:id="@+id/textWater"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.94"
                    android:padding="5dp"
                    android:text="@string/water"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextWater"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/text_glasses"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.38"
                    android:text="glasses"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.60">

                    <TextView
                        android:id="@+id/textDate"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_weight="0.60"
                        android:padding="2dp"
                        android:paddingBottom="5dp"
                        android:text="@string/date"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:ems="10"
                        android:hint="@string/date_hint"
                        android:inputType="number" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/buttonRefresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/refresh_data" />

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/reset" />
            </LinearLayout>

            <TextView
                android:id="@+id/weightList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/refreshButton"
                android:layout_margin="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:typeface="monospace" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
